--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: America/New_York
 # --------------------------
 title: Zero                          # the main title
 
-tagline: In search of truth   # it will display as the sub-title
+tagline:    # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
@@ -82,7 +82,7 @@ avatar: '/assets/img/favicons/android-chrome-512x512.png'
 toc: true
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
+  comments: true  # boolean type, the global switch for posts comments.
   shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
