--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,8 @@ title: Zero                          # the main title
 tagline: For open, tolerant discussion   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  An opinion blog for rational, logical, and 
+  open-minded discussions to get to the truth.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://WskyTngo.github.io'
