--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ tagline: Thoughts across the spectrum  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   An opinion blog for rational, logical, and 
-  open-minded discussions to get to the truth.
+  open-minded discussions. And maybe some 
+  nonsense here and there for kicks.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://WskyTngo.github.io'
